--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "homepage": "https://github.com/mikhail-angelov/mapnn#readme",
   "devDependencies": {
     "ejs": "^3.1.5",
-    "less": "^3.13.0"
+    "less": "^3.13.0",
+    "workbox-cli": "^6.1.1"
   }
 }
